--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,10 @@ html, body {
 	height: 100vh;
 	margin: 0;
 	padding: 0;
+  font-size: 18px;
 }
 body {
-  background-image: url('//s3-us-west-2.amazonaws.com/joshgjohnson-aws/assets/images/bgTop.jpg');
+  background-image: url('//s3-us-west-2.amazonaws.com/joshgjohnson-aws/assets/images/bg-md-running-hills.jpg');
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -24,17 +25,10 @@ body {
 }
     
 h1 {
-	font-size: 42px;
+	font-size: 2.33rem;
 	letter-spacing: -2px;
 	font-weight: 300;
   margin: 0 auto;
-  color: #fff;
-}
-h2 {
-  font-size: 1.25em;
-	letter-spacing: .05em;
-  font-weight: 300;
-  margin: 0px auto 20px;
   color: #fff;
 }
 p {
@@ -43,6 +37,7 @@ p {
   margin: 20px auto 10px;
 	color: #fff;
 }
+
 a,
 a:link,
 a:visited {
@@ -69,7 +64,7 @@ a:visited {
 	border-radius: 15px;
 	margin: 10vh auto;
 	width: 50%;
-	padding: 20px 0;
+	padding: 20px;
 	display: block;
 }
 
@@ -87,8 +82,8 @@ a:visited {
   font-family: sans-serif;
 }
 #countdown .days b, .hours b, .minutes b, .seconds b {
-  font-size: 2rem;
-  font-weight: 400;
+  font-size: 1rem;
+  font-weight: 300;
   text-transform: lowercase;
 }
 
@@ -102,9 +97,10 @@ ul li {
 	display: inline;
 }
 .social i {
-	width: 35px;
-	height: 35px;
-	margin: 0 5px;
+  font-size: 1.5rem;
+	width: 30px;
+	height: 30px;
+	margin: 10px 5px 0px;
 	text-decoration: none;
 	list-style: none;
 }
@@ -118,19 +114,43 @@ a:hover i.fa-reddit-alien {color: #ff5700;}
 a:hover i.fa-instagram {color: #c32aa3;}
 a:hover i.fa-youtube {color: #b31217;}
 a:hover i.fa-codepen {color: #0ebeff;}
+a:hover i.fa-facebook {color: #3b5998;}
+
+.donate,
+ul li {
+	padding: 0px;
+  margin: 5px auto;
+	list-style: none;
+	display: inline;
+	text-decoration: none;
+}
+.donate i {
+  font-size: 2rem;
+	width: 40px;
+	height: 30px;
+	margin: 5px 5px 0px;
+	text-decoration: none;
+	list-style: none;
+}
+.donate :hover, i:hover {
+	text-decoration: none;
+}
+
+a:hover i.fa-donate {color: #216c2a;}
 
 .copyright {
-	font: 300 13px 'Raleway', sans-serif;
+	font: 300 0.66rem 'Raleway', sans-serif;
 	margin: 5px auto;
 	color: #fff;
 	text-align: center;
 	letter-spacing: -0.015em;
+  line-height: 1rem;
 }
 
 
 	@media only screen and (max-width: 600px) { /* For mobile devices */
 		body {
-			background-image: url('//s3-us-west-2.amazonaws.com/joshgjohnson-aws/assets/images/bgTopXS.jpg');
+			background-image: url('//s3-us-west-2.amazonaws.com/joshgjohnson-aws/assets/images/bg-xs-running-hills.jpg');
 		}
     h1 {
       font-size: 36px;
@@ -151,3 +171,243 @@ a:hover i.fa-codepen {color: #0ebeff;}
     }
 }
     
+
+
+/*  subscription box */
+.subscribe {
+  margin: 20px 0 5px;
+}
+ul.items {
+  position: absolute;
+  width: 30px;
+  height: auto;
+  top: 50%;
+  left: -60px;
+  transform: translateY(-50%);
+}
+ul.items li {
+  width: 8px;
+  height: 8px;
+  margin: 10px 0;
+  /* background: white; */
+  border-radius: 50%;
+  opacity: 0.4;
+  cursor: pointer;
+}
+ul.items li.active {
+  opacity: 1;
+}
+
+form {
+  position: relative;
+  width: 100%;
+  height: 60px;
+}
+form fieldset {
+  width: 300px;
+  height: 60px;
+  margin: 0 auto;
+  background: white;
+  border-radius: 5px;
+  opacity: 0;
+}
+form fieldset input, form fieldset p {
+  display: inline-block;
+  width: 210px;
+  margin-left: 50px;
+  color: #333333;
+  font-size: 16px;
+  letter-spacing: 1px;
+  float: left;
+}
+form fieldset p {
+  margin-top: 22px;
+  text-align: center;
+}
+form fieldset input {
+  height: 40px;
+  margin-top: 8px;
+  border: none;
+  outline: none;
+}
+form fieldset .icon {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 15px;
+  transition: all 0.4s ease;
+}
+form fieldset .icon i {
+  position: absolute;
+  display: block;
+}
+form fieldset .icon i::before, form fieldset .icon i::after {
+  position: absolute;
+  content: "";
+}
+form fieldset .icon.left {
+  left: 10px;
+}
+form fieldset .icon.right {
+  right: 10px;
+  cursor: pointer;
+}
+form fieldset .icon.button:hover {
+  background: #f2f2f2;
+  border-radius: 3px;
+  transition: all 0.4s ease;
+}
+form fieldset.enable {
+  opacity: 1;
+  z-index: 1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+form fieldset.disable {
+  opacity: 0;
+  transition: all 0.5s ease-in-out;
+  transform: scale(0.9);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+body.error fieldset {
+  animation: error 0.3s ease-out;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes enable {
+  0% {
+    opacity: 0;
+    transform: scale(0.2);
+  }
+  60% {
+    transform: scale(1.1);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+@keyframes error {
+  0%, 50%, 100% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(-3deg);
+  }
+  75% {
+    transform: rotate(3deg);
+  }
+}
+/**
+ * Icons in CSS, long as f****
+ */
+.icon .arrow {
+  width: 2px;
+  height: 17px;
+  top: 5px;
+  left: 14px;
+  background: #333;
+}
+.icon .arrow::before {
+  width: 8px;
+  height: 8px;
+  bottom: -1px;
+  left: -3px;
+  color: #333;
+  border-color: #333;
+  border-right: 2px solid;
+  border-bottom: 2px solid;
+  transform: rotate(45deg);
+}
+
+.icon .user {
+  width: 20px;
+  height: 10px;
+  bottom: 5px;
+  left: 5px;
+  box-shadow: 0 0 0 2px #333 inset;
+  border-radius: 6px 6px 3px 3px;
+}
+.icon .user::before {
+  width: 10px;
+  height: 10px;
+  top: -9px;
+  left: 5px;
+  box-shadow: 0 0 0 2px #333 inset;
+  border-radius: 50%;
+}
+
+.icon .letter {
+  width: 20px;
+  height: 12px;
+  top: 9px;
+  left: 5px;
+  box-shadow: 0 0 0 2px #333 inset;
+  border-radius: 3px;
+}
+.icon .letter::before, .icon .letter::after {
+  width: 11px;
+  height: 2px;
+  top: 4px;
+  background: #333;
+}
+.icon .letter::before {
+  left: 0;
+  transform: rotate(30deg);
+}
+.icon .letter::after {
+  right: 0;
+  transform: rotate(-30deg);
+}
+
+
+/* TYPED TEXT */
+
+#typed-strings {
+  visibility: hidden;
+}
+#typed {
+  font-size: 1rem;
+	letter-spacing: 0.15rem;
+}
+#typed::after { /* Add custom cursor so it auto inherits font styles */
+	content: '|';
+	display: inline;
+	-webkit-animation: blink 0.9s infinite;
+	   -moz-animation: blink 0.9s infinite;
+	        animation: blink 0.9s infinite;
+}
+.typed_wrap {
+	width: 100%;
+	height: 2.5rem;
+	padding: 5px;
+}
+.typed_wrap {
+  white-space: nowrap;
+	display: inline;
+	font-family: "Raleway", sans-serif;
+}
+@keyframes blink{
+      0% { opacity:1; }
+     70% { opacity:0; }
+    100% { opacity:1; }
+}
+@-webkit-keyframes blink{
+    0% { opacity:1; }
+   70% { opacity:0; }
+  100% { opacity:1; }
+}
+@-moz-keyframes blink{
+    0% { opacity:1; }
+   70% { opacity:0; }
+  100% { opacity:1; }
+}
