updated date and socials

--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,7 @@ a:hover i.fa-instagram {color: #c32aa3;}
 a:hover i.fa-youtube {color: #b31217;}
 a:hover i.fa-codepen {color: #0ebeff;}
 a:hover i.fa-facebook {color: #3b5998;}
+a:hover i.fa-twitch {color: #6441a4;}
 
 .donate,
 ul li {
