updated more links

--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ a:hover i.fa-youtube {color: #b31217;}
 a:hover i.fa-codepen {color: #0ebeff;}
 a:hover i.fa-facebook {color: #3b5998;}
 a:hover i.fa-twitch {color: #6441a4;}
+a:hover i.fa-playstation {color: #003087;}
 
 .donate,
 ul li {
