--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html, body {
   font-size: 18px;
 }
 body {
-  background-image: url('//s3-us-west-2.amazonaws.com/joshgjohnson-aws/assets/images/bg-md-running-hills.jpg');
+  background-image: url('//s3.console.aws.amazon.com/s3/object/joshgjohnson-aws?region=us-west-2&prefix=assets/images/DCC74EDC-5C0F-40F4-BC18-C2AB31099618.jpeg');
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -152,7 +152,7 @@ a:hover i.fa-donate {color: #216c2a;}
 
 	@media only screen and (max-width: 600px) { /* For mobile devices */
 		body {
-			background-image: url('//s3-us-west-2.amazonaws.com/joshgjohnson-aws/assets/images/bg-xs-running-hills.jpg');
+			background-image: url('//s3.console.aws.amazon.com/s3/object/joshgjohnson-aws?region=us-west-2&prefix=assets/images/DCC74EDC-5C0F-40F4-BC18-C2AB31099618.jpeg');
 		}
     h1 {
       font-size: 36px;
