--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* ==== Google font ==== */
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600|Raleway');
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@100..900&display=swap');
 
 /* ==== FontAwesome ==== */
 
@@ -14,19 +14,19 @@ html, body {
   font-size: 18px;
 }
 body {
-  background-image: url('//s3.console.aws.amazon.com/s3/object/joshgjohnson-aws?region=us-west-2&prefix=assets/images/DCC74EDC-5C0F-40F4-BC18-C2AB31099618.jpeg');
+  background-image: url('https://www.dropbox.com/scl/fi/09z8jlilf4jlj5hmejyhv/mountain-bg.png?rlkey=a271c4zumcb0za4i09ohx887e&st=bpb8cgr2&raw=1');
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
   background-attachment: relative;
-  background-color: #464646;
-	font: 18px 'Raleway', sans-serif;
+  background-color: #0F0F0F;
+	font: 14px normal 'Urbanist', sans-serif;
 	color: #fff;
 }
     
 h1 {
 	font-size: 2.33rem;
-	letter-spacing: -2px;
+	letter-spacing: -1.5px;
 	font-weight: 300;
   margin: 0 auto;
   color: #fff;
@@ -57,7 +57,7 @@ a:visited {
 	max-width: 85%;
  	/* border: 2px solid #fff; */
 	/* border-radius: 50%; */
-	padding: 2px;
+	padding: 20px;
 }
 .container {
 	background-color: rgba(22,22,22,0.55);
@@ -141,7 +141,7 @@ ul li {
 a:hover i.fa-donate {color: #216c2a;}
 
 .copyright {
-	font: 300 0.66rem 'Raleway', sans-serif;
+	font: 300 0.66rem 'Urbanist', sans-serif;
 	margin: 5px auto;
 	color: #fff;
 	text-align: center;
@@ -152,7 +152,7 @@ a:hover i.fa-donate {color: #216c2a;}
 
 	@media only screen and (max-width: 600px) { /* For mobile devices */
 		body {
-			background-image: url('//s3.console.aws.amazon.com/s3/object/joshgjohnson-aws?region=us-west-2&prefix=assets/images/DCC74EDC-5C0F-40F4-BC18-C2AB31099618.jpeg');
+			background-image: url('https://www.dropbox.com/scl/fi/l2mok2ze5cdk2ntnbikin/mobile-mountain-bg.png?rlkey=l0hrhileryf5w1r0oemawa7uc&st=iwhr3jtx&raw=1');
 			font-size: 14px;
 		}
     h1 {
@@ -393,11 +393,9 @@ body.error fieldset {
 	width: 100%;
 	height: 2.5rem;
 	padding: 5px;
-}
-.typed_wrap {
-  white-space: nowrap;
+  	white-space: nowrap;
 	display: inline;
-	font-family: "Raleway", sans-serif;
+	font-family: "Urbanist", sans-serif;
 }
 @keyframes blink{
       0% { opacity:1; }
