--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,8 @@ body {
 }
     
 h1 {
-	font-size: 2.33rem;
-	letter-spacing: -1.5px;
+	font-size: 1.75rem;
+	letter-spacing: 0px;
 	font-weight: 300;
   margin: 0 auto;
   color: #fff;
@@ -54,10 +54,10 @@ a:visited {
 	text-align: center;
 }
 #wrapper img.logo {
-	max-width: 85%;
+	max-width: 90%;
  	/* border: 2px solid #fff; */
 	/* border-radius: 50%; */
-	padding: 20px;
+	padding: 20px auto 10px;
 }
 .container {
 	background-color: rgba(22,22,22,0.55);
@@ -379,7 +379,7 @@ body.error fieldset {
   visibility: hidden;
 }
 #typed {
-  font-size: 1rem;
+  font-size: 0.75rem;
 	letter-spacing: 0.10rem;
 }
 #typed::after { /* Add custom cursor so it auto inherits font styles */
@@ -391,7 +391,7 @@ body.error fieldset {
 }
 .typed_wrap {
 	width: 100%;
-	height: 2.5rem;
+	height: 1.5rem;
 	padding: 5px;
   	white-space: nowrap;
 	display: inline;
